--- a/animation.html
+++ b/animation.html
@@ -54,149 +54,157 @@
       </section>
 
       <section>
-        <h2>OPGAVER I TEMAET</h2>
-        <div class="temabillede">
-          <img src="billeder/spil_portfolio.png" />
+        <div class="tema_overskrift">
+          <h2>OPGAVER I TEMAET</h2>
         </div>
-        <h2>04.08.00</h2>
-        <h3>SPILLET</h3>
-        <div class="paragraph">
-          <p>
-            Denne del af temaet bestod af kodning, hvor vi fik kendskab til
-            grundlæggende JavaScript samt CSS-animationer.
-          </p>
-          <p>
-            Vi startede med at placere spilscenen vha. HTML samt CSS hvorefter
-            vi placerede spil og ui-elementerne. Her lærte vi om CSS-animationer
-            til at animere enkelte spilelementer gennem container og sprite
-            princippet der gør det muligt at animere container og sprite hver
-            for sig. Derefter skulle vi lære at styre de forskellige elementer
-            vha. JavaScript. Vi startede med funktioner, console.log samt
-            document.querySelector(”selector”). Derudover skulle vi lave en
-            simpel start/stop animation og elementer der skulle forsvinde
-            hvorefter nye kom til. Her benyttede vi os af
-            addEventListener(”click/animationend/animationiteration/load”) samt
-            classList add/remove(”class”) og math.random.
-          </p>
-          <p>
-            I efterfølgende fase programmerede vi funktionerne til optjening af
-            point at miste liv samt tabe og vinde spillet. Hvor vi som noget nyt
-            lærte om betingelser (if-else).
-          </p>
-          <p>
-            Under udvikling af spillet benyttede vi os af Inspector (consol)
-            hvilket hjalp mig med fejlfinding af kode. Ved hjælp af state
-            machine diagrammet jeg lavede i første fase, fik jeg et visuelt
-            overblik over funktionsnavne og hvad der skulle ske under hver
-            funktion ift. animation ud fra hvad der skulle ske med container og
-            sprite på et spilelement.
-          </p>
-          <p>
-            I næstsidste fase skulle lyden til spillet optages, hvor vi lærte at
-            rense støj vha. Adobe Audition og styre lyden vha. JavaScript. Vi
-            fik også tricks til forbedre vores spil og implementere supplerende
-            funktioner. Jeg benyttede mig af position array, da jeg havde et
-            whack-a-mole type spil hvor jeg ikke ønskede at mine spilelementer
-            poppede op det samme sted. Derudover øgede jeg sværhedsgraden med en
-            betingelse (if-else) ud fra point hvor hastigheden steg ud fra et
-            vis antal point.
-          </p>
-          <p>
-            Spillet testet i grupper i klassen. Ud fra feedback kunne jeg
-            konstatere at det ikke var tydeligt nok med spilfigurernes
-            rolle/konsekvenser ift. liv og point. Der var også tvivl om hvad der
-            skulle til for at vinde eller tabe spillet. Løsninger på dette kunne
-            være en infoskærm med forklaring om spilelementerne og en lille
-            tekst i vinder-og taberskærmen der forklarede reglerne. Derudover
-            blev jeg gjort opmærksom på en fejl der gjorde at man kunne klippe
-            på spilelementerne efter de var gået i skjul, hvilket jeg nåede at
-            løse efterfølgende.
-          </p>
+
+        <div class="tema_grid">
+          <div class="temabillede">
+            <img src="billeder/spil_portfolio.png" />
+          </div>
+          <div class="opgave_info">
+            <h2>04.08.00</h2>
+            <h3>SPILLET</h3>
+            <button>
+              <a
+                href="http://www.ceciliejasmin.dk/kea/04_animation/mus_i_elefanthus/index.html"
+                target="_blank"
+                >SPIL SPILLET</a
+              >
+            </button>
+          </div>
         </div>
-        <button>
-          <a
-            href="http://www.ceciliejasmin.dk/kea/04_animation/mus_i_elefanthus/index.html"
-            target="_blank"
-            >SPIL SPILLET</a
-          >
-        </button>
+
+        <details>
+          <summary>LÆS OM MIT FORLØB HER</summary>
+          <div class="paragraph">
+            <p>
+              Denne del af temaet bestod af kodning, hvor vi fik kendskab til
+              grundlæggende JavaScript samt CSS-animationer.
+            </p>
+            <p>
+              Vi startede med at placere spilscenen vha. HTML samt CSS hvorefter
+              vi placerede spil og ui-elementerne. Her lærte vi om
+              CSS-animationer til at animere enkelte spilelementer gennem
+              container og sprite princippet der gør det muligt at animere
+              container og sprite hver for sig. Derefter skulle vi lære at styre
+              de forskellige elementer vha. JavaScript. Vi startede med
+              funktioner, console.log samt document.querySelector(”selector”).
+              Derudover skulle vi lave en simpel start/stop animation og
+              elementer der skulle forsvinde hvorefter nye kom til. Her
+              benyttede vi os af
+              addEventListener(”click/animationend/animationiteration/load”)
+              samt classList add/remove(”class”) og math.random.
+            </p>
+            <p>
+              I efterfølgende fase programmerede vi funktionerne til optjening
+              af point at miste liv samt tabe og vinde spillet. Hvor vi som
+              noget nyt lærte om betingelser (if-else).
+            </p>
+            <p>
+              Under udvikling af spillet benyttede vi os af Inspector (consol)
+              hvilket hjalp mig med fejlfinding af kode. Ved hjælp af state
+              machine diagrammet jeg lavede i første fase, fik jeg et visuelt
+              overblik over funktionsnavne og hvad der skulle ske under hver
+              funktion ift. animation ud fra hvad der skulle ske med container
+              og sprite på et spilelement.
+            </p>
+            <p>
+              I næstsidste fase skulle lyden til spillet optages, hvor vi lærte
+              at rense støj vha. Adobe Audition og styre lyden vha. JavaScript.
+              Vi fik også tricks til forbedre vores spil og implementere
+              supplerende funktioner. Jeg benyttede mig af position array, da
+              jeg havde et whack-a-mole type spil hvor jeg ikke ønskede at mine
+              spilelementer poppede op det samme sted. Derudover øgede jeg
+              sværhedsgraden med en betingelse (if-else) ud fra point hvor
+              hastigheden steg ud fra et vis antal point.
+            </p>
+            <p>
+              Spillet testet i grupper i klassen. Ud fra feedback kunne jeg
+              konstatere at det ikke var tydeligt nok med spilfigurernes
+              rolle/konsekvenser ift. liv og point. Der var også tvivl om hvad
+              der skulle til for at vinde eller tabe spillet. Løsninger på dette
+              kunne være en infoskærm med forklaring om spilelementerne og en
+              lille tekst i vinder-og taberskærmen der forklarede reglerne.
+              Derudover blev jeg gjort opmærksom på en fejl der gjorde at man
+              kunne klippe på spilelementerne efter de var gået i skjul, hvilket
+              jeg nåede at løse efterfølgende.
+            </p>
+          </div>
+        </details>
       </section>
 
       <section>
-        <div class="section_wrapper2">
+        <div class="tema_grid">
           <div class="temabillede right">
             <img src="billeder/spil_web_portfolio.png" />
           </div>
-        </div>
-      </section>
+          <div class="opgave_info">
+            <h2>04.09.00</h2>
+            <h3>SPIL WEBSITE</h3>
 
-      <section>
-        <h2>04.09.00</h2>
-        <h3>SPIL WEBSITE</h3>
-        <div class="paragraph">
-          <p>
-            I temaet begyndte vi med design og koncept af spillet, hvor vi blev
-            undervist i ide-genereringsteknikker, som mindmap, formgivnings- og
-            kompositions teknikker samt design af UI og spilelementer såsom
-            baggrund design, figurdesign m.m.
-          </p>
-          <p>
-            Jeg benyttede mig af mindmap metoden for at udvælge mit koncept. Jeg
-            endte med myten om at elefanter er bange for mus. Spillet går ud på
-            at man skal fange et vis antal mus inden elefanten når at gå i panik
-            og ødelægge sit hjem. Da konceptet var valgt, lavede jeg en lo-fi
-            paper prototype, for at teste og evt. finde fejl, samt
-            aktivitetsdiagram og state machine diagram for at skabte overblik
-            over kodningen i JavaScript. Ud fra en valgt stil skulle vi lavede
-            moodboard og styletile, hvor jeg valgte Owen Davey, der kort
-            beskrevet kombinerer 2D med detaljer der skaber en vis 3D effekt.
-            Herefter skulle spilelementerne skitseres i hånden og efterfølgende
-            rentegnes i Adobe Illustrator.
-          </p>
-          <p>
-            I sidste fase af temaet skulle dette dokumenteres med et
-            dokumentationssite med en assetliste. Her fik vi undervisning i
-            hvordan man bedst muligt planlægger et website på kort tid. Gennem
-            udarbejdelsen af websitet fik jeg genopfrisket meget viden og trænet
-            mange færdigheder fra tema 2 såsom layoutdiagrammer. grids, margin,
-            padding m.m.
-          </p>
-          <p>
-            Da websitet var færdigt, skulle det præsenteres for en lærer, hvor
-            jeg fik feedback for både spillet og websitet. Her lærte jeg at
-            pointsystemet angivet ”/20” kunne være demotiverende da man ville
-            stoppe med at prøve at fange mus efter de 20. Derudover kunne
-            spillet have været mere spændende med en scene hvor der var tilføjet
-            mikroanimationer, fx med elefanten i baggrunden der bevægede sig.
-            Derudover kunne scenen godt have haft flere detaljer, såsom hø og
-            musen kunne godt have aftegninger af pels når nu fuglenes vinger var
-            forholdsvis detaljerede. Men generelt havde spillet fine lyde, fine
-            figurer og en god sværhedsgrad, hvor det ikke var for nemt og man
-            havde lyst til at prøve igen.
-          </p>
-        </div>
-        <button>
-          <a
-            href="http://ceciliejasmin.dk/kea/04_animation/website/"
-            target="_blank"
-            >SPIL WEBSITE</a
-          >
-        </button>
-        <button>
-          <a
-            href="http://ceciliejasmin.dk/kea/04_animation/website/doku.html"
-            target="_blank"
-            >DOKUMENTATION</a
-          >
-        </button>
-      </section>
-
-      <section class="wide_2">
-        <div class="doku">
-          <div class="doku_indhold">
-            <h2>DOKUMENTATION</h2>
+            <button>
+              <a
+                href="http://ceciliejasmin.dk/kea/04_animation/website/"
+                target="_blank"
+                >SPIL WEBSITE</a
+              >
+            </button>
+            <button>
+              <a
+                href="http://ceciliejasmin.dk/kea/04_animation/website/doku.html"
+                target="_blank"
+                >DOKUMENTATION</a
+              >
+            </button>
           </div>
         </div>
+
+        <details>
+          <summary>LÆS OM MIT FORLØB HER</summary>
+          <div class="paragraph">
+            <p>
+              I temaet begyndte vi med design og koncept af spillet, hvor vi
+              blev undervist i ide-genereringsteknikker, som mindmap,
+              formgivnings- og kompositions teknikker samt design af UI og
+              spilelementer såsom baggrund design, figurdesign m.m.
+            </p>
+            <p>
+              Jeg benyttede mig af mindmap metoden for at udvælge mit koncept.
+              Jeg endte med myten om at elefanter er bange for mus. Spillet går
+              ud på at man skal fange et vis antal mus inden elefanten når at gå
+              i panik og ødelægge sit hjem. Da konceptet var valgt, lavede jeg
+              en lo-fi paper prototype, for at teste og evt. finde fejl, samt
+              aktivitetsdiagram og state machine diagram for at skabte overblik
+              over kodningen i JavaScript. Ud fra en valgt stil skulle vi lavede
+              moodboard og styletile, hvor jeg valgte Owen Davey, der kort
+              beskrevet kombinerer 2D med detaljer der skaber en vis 3D effekt.
+              Herefter skulle spilelementerne skitseres i hånden og
+              efterfølgende rentegnes i Adobe Illustrator.
+            </p>
+            <p>
+              I sidste fase af temaet skulle dette dokumenteres med et
+              dokumentationssite med en assetliste. Her fik vi undervisning i
+              hvordan man bedst muligt planlægger et website på kort tid. Gennem
+              udarbejdelsen af websitet fik jeg genopfrisket meget viden og
+              trænet mange færdigheder fra tema 2 såsom layoutdiagrammer. grids,
+              margin, padding m.m.
+            </p>
+            <p>
+              Da websitet var færdigt, skulle det præsenteres for en lærer, hvor
+              jeg fik feedback for både spillet og websitet. Her lærte jeg at
+              pointsystemet angivet ”/20” kunne være demotiverende da man ville
+              stoppe med at prøve at fange mus efter de 20. Derudover kunne
+              spillet have været mere spændende med en scene hvor der var
+              tilføjet mikroanimationer, fx med elefanten i baggrunden der
+              bevægede sig. Derudover kunne scenen godt have haft flere
+              detaljer, såsom hø og musen kunne godt have aftegninger af pels
+              når nu fuglenes vinger var forholdsvis detaljerede. Men generelt
+              havde spillet fine lyde, fine figurer og en god sværhedsgrad, hvor
+              det ikke var for nemt og man havde lyst til at prøve igen.
+            </p>
+          </div>
+        </details>
       </section>
     </main>
 
