--- a/content.html
+++ b/content.html
@@ -54,167 +54,177 @@
       </section>
 
       <section>
-        <h2>OPGAVER I TEMAET</h2>
-        <div class="temabillede">
-          <img src="billeder/pilot_portfolio.png" />
-        </div>
-        <h2>05.01.02</h2>
-        <h3>PILOT PROJEKT</h3>
-        <div class="paragraph">
-          <p>
-            I denne opgave skulle vi i grupper af 2 lave et interview vi
-            derefter kunne klippe sammen til en film på 1 minut. Filmen skulle
-            indeholde en person der beretter om en passion, B-rolls,
-            establishing shot med min. 5 klip med min. 3 forskellige framings og
-            lyd fra ekstern lydkilde.
-          </p>
-          <p>
-            Vi fik undervisning i dramaturgi, hvor vi lærte om
-            billedekomposition som det gyldne snit, luft over hovedet samt luft
-            i blik og taleretning. Her lærte vi også om 5-skudsreglen.
-          </p>
-          <p>
-            Vi fik færdigheder i Premiere Pro hvor vi lærte om klipning,
-            transitions, synkronisering af lyd, colorgrading, hvidbalance m.m.
-          </p>
-          <p>
-            Derudover lærte vi om forarbejdet inden optagelser, hvor vi blandt
-            udarbejdede en synopsis bestående af præmis, logline, koncept,
-            storyboard samt interview. Her skulle vi bruge vores viden om
-            dramaturgi for at planlægge de bedste optagelser.
-          </p>
-          <p>
-            Vi fik også undervisning i udstyr til optagelser såsom manual
-            indstilling af et DSLR-kamera, herunder blændetal og hvordan man
-            filmer i RAW-format og gode råd til lydoptagelser med ekstern
-            lydkilde.
-          </p>
-          <p>
-            Under videoredigeringen fandt jeg ud af at vores video var i ret
-            dårlig kvalitet trods det var filmet i RAW-format. Jeg fandt ud af
-            at jeg havde indstillet ISOen alt for højt under optagelserne,
-            hvilket resulterede i billedstøjen. Jeg havde ikke erfaring nok med
-            indstilling af DSLR-kamera til at vide dette på forhånd, men nu ved
-            jeg i fremtiden at det er noget jeg skal være opmærksom på.
-          </p>
-          <p>
-            Sidst skulle også prøve kræfter med at indsætte to slags videoer til
-            et website; en man har uploadet til sit domæne og et man har
-            uploadet til YouTube. I den forbindelse lærte vi bl.a. om HTML5
-            video tagget. Websitet var et vi selv skulle lave og skulle nærmest
-            fungere som en slags filmplakat for de to videoer.
-          </p>
+        <div class="tema_overskrift">
+          <h2>OPGAVER I TEMAET</h2>
         </div>
 
-        <button>
-          <a
-            href="http://ceciliejasmin.dk/kea/05_content/01_pilot/pilot_website/index.html"
-            target="_blank"
-            >BESØG WEBSITE</a
-          >
-        </button>
-        <button>
-          <a
-            href="http://ceciliejasmin.dk/kea/05_content/01_pilot/julianes_passion_interview.mp4"
-            target="_blank"
-            >SE VIDEO</a
-          >
-        </button>
+        <div class="tema_grid">
+          <div class="temabillede">
+            <img src="billeder/pilot_portfolio.png" />
+          </div>
+          <div class="opgave_info">
+            <h2>05.01.02</h2>
+            <h3>PILOT PROJEKT</h3>
+            <button>
+              <a
+                href="http://ceciliejasmin.dk/kea/05_content/01_pilot/pilot_website/index.html"
+                target="_blank"
+                >BESØG WEBSITE</a
+              >
+            </button>
+            <button>
+              <a
+                href="http://ceciliejasmin.dk/kea/05_content/01_pilot/julianes_passion_interview.mp4"
+                target="_blank"
+                >SE VIDEO</a
+              >
+            </button>
+          </div>
+        </div>
+
+        <details>
+          <summary>LÆS OM MIT FORLØB HER</summary>
+          <div class="paragraph">
+            <p>
+              I denne opgave skulle vi i grupper af 2 lave et interview vi
+              derefter kunne klippe sammen til en film på 1 minut. Filmen skulle
+              indeholde en person der beretter om en passion, B-rolls,
+              establishing shot med min. 5 klip med min. 3 forskellige framings
+              og lyd fra ekstern lydkilde.
+            </p>
+            <p>
+              Vi fik undervisning i dramaturgi, hvor vi lærte om
+              billedekomposition som det gyldne snit, luft over hovedet samt
+              luft i blik og taleretning. Her lærte vi også om 5-skudsreglen.
+            </p>
+            <p>
+              Vi fik færdigheder i Premiere Pro hvor vi lærte om klipning,
+              transitions, synkronisering af lyd, colorgrading, hvidbalance m.m.
+            </p>
+            <p>
+              Derudover lærte vi om forarbejdet inden optagelser, hvor vi blandt
+              udarbejdede en synopsis bestående af præmis, logline, koncept,
+              storyboard samt interview. Her skulle vi bruge vores viden om
+              dramaturgi for at planlægge de bedste optagelser.
+            </p>
+            <p>
+              Vi fik også undervisning i udstyr til optagelser såsom manual
+              indstilling af et DSLR-kamera, herunder blændetal og hvordan man
+              filmer i RAW-format og gode råd til lydoptagelser med ekstern
+              lydkilde.
+            </p>
+            <p>
+              Under videoredigeringen fandt jeg ud af at vores video var i ret
+              dårlig kvalitet trods det var filmet i RAW-format. Jeg fandt ud af
+              at jeg havde indstillet ISOen alt for højt under optagelserne,
+              hvilket resulterede i billedstøjen. Jeg havde ikke erfaring nok
+              med indstilling af DSLR-kamera til at vide dette på forhånd, men
+              nu ved jeg i fremtiden at det er noget jeg skal være opmærksom på.
+            </p>
+            <p>
+              Sidst skulle også prøve kræfter med at indsætte to slags videoer
+              til et website; en man har uploadet til sit domæne og et man har
+              uploadet til YouTube. I den forbindelse lærte vi bl.a. om HTML5
+              video tagget. Websitet var et vi selv skulle lave og skulle
+              nærmest fungere som en slags filmplakat for de to videoer.
+            </p>
+          </div>
+        </details>
       </section>
 
       <section>
-        <div class="section_wrapper2">
+        <div class="tema_grid">
           <div class="temabillede right">
             <img src="billeder/redesign_portfolio.png" />
           </div>
-        </div>
-      </section>
+          <div class="opgave_info">
+            <h2>05.02.00</h2>
+            <h2>REDESIGN</h2>
 
-      <section>
-        <h2>05.02.00</h2>
-        <h2>REDESIGN</h2>
-        <div class="paragraph">
-          <p>
-            I denne opgave skulle vi i grupper af 4 finde en virksomhed hvor vi
-            kunne redesigne deres website.
-          </p>
-          <p>
-            Opgaven var bygget op omkring dobbelt diamant som udviklingsmetode,
-            med discover, define, develop og deliver faser. I gruppearbejdet
-            blev vi introduceret for SCRUM og trello boards, hvilket lærte os om
-            projekt planlægning og motivation under større opgaver.
-          </p>
-          <p>
-            Vores virksomhed blev Osvald Jensen der producerer transmissionsdele
-            til andre virksomheder. Vi lavede en analyse over virksomheden, hvor
-            vi undersøgte virksomhedsprofilen, brugerprofiler og lavede analyse
-            af eksisterende site med fokus på fotostil, indholdsoversigt samt
-            funktionalitetstest. Vi lavede desuden styletile over eksisterende
-            site.
-          </p>
-          <p>
-            Vi benyttede os af flere testmetoder både før og efter redesign for
-            at kunne sammenligne resultatet. Det var blandt andet 5 sec-testen,
-            hvor vi får indblik i brugerens førstehåndsindtryk, BERT-test der
-            undersøger brugernes opfattelse af websitet samt Lighthouse audit,
-            der aspekter af URL herunder performance, accesability, best
-            practices og SEO. Ud fra disse tests kunne vi konkludere at sitet
-            var blevet forbedret i alle tests efter redesign. Dog kunne vi ikke
-            ramme målgruppen, der var andre virksomheder, og derfor er der en
-            chance for at resultatet kunne have været anderledes. Derfor lærte
-            vi vigtigheden af at teste på den rigtige målgruppe.
-          </p>
-          <p>
-            Under planlægning af redesignet lavede vi en sitemap over
-            eksisterende website for at danne os overblik over strukturen på
-            siden. Her opdagede vi at der var for mange sider, så da vi
-            efterfølgende lavede sitemap til redesignet samlede vi flere sider
-            til en. Derefter lavede vi moodboard, wireframe, layoutdiagrammer
-            samt en HI-FI-prototype over det nye site. Det gav os en masse
-            overblik da vi senere skulle kode.
-          </p>
-          <p>
-            Inden optagelserne lavede vi en synopsis og sendte interviewguiden
-            til product owner inden optagelse.
-          </p>
-          <p>
-            Postproduktion benyttede vi os af de færdigheder vi havde lært i
-            Premiere Pro og Audition til produktion af nyt indhold i form af en
-            virksomhedsvideo, en kvadratisk Facebook video samt flere
-            herovideoer til websitet.
-          </p>
-          <p>
-            Senere i temaet blev vi undervist i hvordan man laver en burgermenu
-            vha. JavaScript samt hvordan man sætter tekst ovenpå en video med
-            CSS.
-          </p>
-          <p>
-            Sidst skulle redesignet præsenteres for klassen med feedback. Her
-            lærte vi at vores design var for mørkt på websitet, hvilket gjorde
-            det svært at se indholdet. Derudover fik vi kritik for målgruppen
-            som vi ikke helt kunne ramme.
-          </p>
-        </div>
-        <button>
-          <a href="https://musing-shirley-56f439.netlify.app/" target="_blank"
-            >BESØG WEBSITE</a
-          >
-        </button>
-        <button>
-          <a
-            href="https://ceciliejasmin.dk/kea/05_content/02_redesign/redesign.pdf"
-            target="_blank"
-            >DOKUMENTATION</a
-          >
-        </button>
-      </section>
-
-      <section class="wide_2">
-        <div class="doku">
-          <div class="doku_indhold">
-            <h2>DOKUMENTATION</h2>
+            <button>
+              <a
+                href="https://musing-shirley-56f439.netlify.app/"
+                target="_blank"
+                >BESØG WEBSITE</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://ceciliejasmin.dk/kea/05_content/02_redesign/redesign.pdf"
+                target="_blank"
+                >DOKUMENTATION</a
+              >
+            </button>
           </div>
         </div>
+
+        <details>
+          <summary>LÆS OM MIT FORLØB HER</summary>
+          <div class="paragraph">
+            <p>
+              I denne opgave skulle vi i grupper af 4 finde en virksomhed hvor
+              vi kunne redesigne deres website.
+            </p>
+            <p>
+              Opgaven var bygget op omkring dobbelt diamant som
+              udviklingsmetode, med discover, define, develop og deliver faser.
+              I gruppearbejdet blev vi introduceret for SCRUM og trello boards,
+              hvilket lærte os om projekt planlægning og motivation under større
+              opgaver.
+            </p>
+            <p>
+              Vores virksomhed blev Osvald Jensen der producerer
+              transmissionsdele til andre virksomheder. Vi lavede en analyse
+              over virksomheden, hvor vi undersøgte virksomhedsprofilen,
+              brugerprofiler og lavede analyse af eksisterende site med fokus på
+              fotostil, indholdsoversigt samt funktionalitetstest. Vi lavede
+              desuden styletile over eksisterende site.
+            </p>
+            <p>
+              Vi benyttede os af flere testmetoder både før og efter redesign
+              for at kunne sammenligne resultatet. Det var blandt andet 5
+              sec-testen, hvor vi får indblik i brugerens førstehåndsindtryk,
+              BERT-test der undersøger brugernes opfattelse af websitet samt
+              Lighthouse audit, der aspekter af URL herunder performance,
+              accesability, best practices og SEO. Ud fra disse tests kunne vi
+              konkludere at sitet var blevet forbedret i alle tests efter
+              redesign. Dog kunne vi ikke ramme målgruppen, der var andre
+              virksomheder, og derfor er der en chance for at resultatet kunne
+              have været anderledes. Derfor lærte vi vigtigheden af at teste på
+              den rigtige målgruppe.
+            </p>
+            <p>
+              Under planlægning af redesignet lavede vi en sitemap over
+              eksisterende website for at danne os overblik over strukturen på
+              siden. Her opdagede vi at der var for mange sider, så da vi
+              efterfølgende lavede sitemap til redesignet samlede vi flere sider
+              til en. Derefter lavede vi moodboard, wireframe, layoutdiagrammer
+              samt en HI-FI-prototype over det nye site. Det gav os en masse
+              overblik da vi senere skulle kode.
+            </p>
+            <p>
+              Inden optagelserne lavede vi en synopsis og sendte interviewguiden
+              til product owner inden optagelse.
+            </p>
+            <p>
+              Postproduktion benyttede vi os af de færdigheder vi havde lært i
+              Premiere Pro og Audition til produktion af nyt indhold i form af
+              en virksomhedsvideo, en kvadratisk Facebook video samt flere
+              herovideoer til websitet.
+            </p>
+            <p>
+              Senere i temaet blev vi undervist i hvordan man laver en
+              burgermenu vha. JavaScript samt hvordan man sætter tekst ovenpå en
+              video med CSS.
+            </p>
+            <p>
+              Sidst skulle redesignet præsenteres for klassen med feedback. Her
+              lærte vi at vores design var for mørkt på websitet, hvilket gjorde
+              det svært at se indholdet. Derudover fik vi kritik for målgruppen
+              som vi ikke helt kunne ramme.
+            </p>
+          </div>
+        </details>
       </section>
     </main>
 
