text added grid fixed

--- a/om_mig.html
+++ b/om_mig.html
@@ -96,6 +96,15 @@
           <div class="tegning">
             <img src="billeder/tegninger2.webp" />
           </div>
+           <div class="text_left">
+            <h2>KOMPETENCER</h2>
+            <p>
+              2 år som tekstbeskrivelsesforfatter hos Global Customer Service hvor jeg også fik erfaring med design af websites. 
+            </p>
+            <p>
+            Gennem 1. semester på MDD på Kea har jeg opnået grundlæggende viden indenfor HTML, CSS, JavaScript, samt viden indenfor designteori og dramaturgi. </p><p>Derudover har jeg fået erfaring med Adobe programmerne Photoshop, XD, Illustrator, Audition samt Premiere pro. 
+            </p>
+           
         </div>
       </section>
 
