--- a/ux.html
+++ b/ux.html
@@ -56,82 +56,85 @@
       </section>
 
       <section>
-        <h2>OPGAVER I TEMAET</h2>
-        <div class="temabillede">
-          <img src="billeder/ux_portfolio.png" />
-        </div>
-        <h2>03.02.02</h2>
-        <h3>XD PROTOTYPE</h3>
-        <div class="paragraph">
-          <p>
-            I opgaven skulle vi udarbejde en klikbar, HI-FI-prototype til en
-            t-shirt webshop. Vi skulle selv finde på en USP der kunne løse en
-            problemstilling ud fra en valgt målgruppe. Min målgruppe var 18-30
-            år og min problemstilling var den store konkurrence i tøjbranchen
-            samt besværligheden ved at returnere tøj når man shopper online,
-            ofte fordi tøjet ikke passer. Løsningen blev bæredygtige unisex
-            t-shirts hvor man kunne hyre en designer/skrædder og derved sikre
-            perfekt pasform samt tilbyde custom made designs. Her lærte jeg både
-            at tænke på virksomhedens brand samt brugerens oplevelse. Ideen og
-            layoutet blev fundet ved at benytte bl.a. design sprint som metode.
-            Det fandt jeg meget nyttigt da jeg havde svært ved at finde på et
-            koncept i starten.
-          </p>
-          <p>
-            Da konceptet var fastlagt, udarbejdede jeg en HI-FI-prototype i
-            Adobe XD der løbende kunne testes og forbedres. Her lærte jeg om
-            værktøjerne ui-kits og components, der gjorde det nemmere og
-            hurtigere for mig at lave prototypen. Jeg brugte bl.a. components i
-            menuen, CTA-knapper, footer m.m.
-          </p>
-          <p>
-            For at kunne skabe et brugervenligt produkt lærte jeg om user
-            interface og konventioner. Det havde betydning for min placering af
-            logoet, indkøbskurven, søgefeltet m.m. Dette lærte jeg blandt andet
-            gennem tænke-højt-testen hvor man observerer brugerens adfærd samt
-            sitets usability. Derudover lærte jeg om copy og microcopy der er
-            små tekster der skal motivere brugeren til at udføre en handling
-            samtidig med at brugeren får den bedste oplevelse.
-          </p>
-          <p>
-            Under temaet fik vi færdigheder i Photoshop til at kunne producere
-            billeder til prototypen. I mit tilfælde lærte jeg at lave
-            splashcolor effekt på mine produkter samt duotone billeder. Ud fra
-            undersøgelser blev jeg bekræftet i at mit farverige design tiltrak
-            opmærksomheden som ønsket.
-          </p>
-          <p>
-            Til sidst skulle det færdige produkt pitches, hvor vi argumenterede
-            for de designmæssige og funktionelle beslutninger vi havde taget ud
-            fra data og reelle indsigter vi har fået fra vores research, test og
-            feedback. Her lærte jeg at mit pitch skulle have mere fokus på selve
-            processen og de data/indsigter jeg havde indsamlet end det færdige
-            produkt.
-          </p>
+        <div class="tema_overskrift">
+          <h2>OPGAVER I TEMAET</h2>
         </div>
 
-        <button>
-          <a
-            href="https://xd.adobe.com/view/34c4c29e-1f5b-4f42-8f38-92ab463a18df-6197/"
-            target="_blank"
-            >SE PROTOTYPE</a
-          >
-        </button>
-        <button>
-          <a
-            href="https://ceciliejasmin.dk/kea/03_ux/dokumentation.pdf"
-            target="_blank"
-            >DOKUMENTATION</a
-          >
-        </button>
-      </section>
-
-      <section class="wide_2">
-        <div class="doku">
-          <div class="doku_indhold">
-            <h2>DOKUMENTATION</h2>
+        <div class="tema_grid">
+          <div class="temabillede">
+            <img src="billeder/ux_portfolio.png" />
+          </div>
+          <div class="opgave_info">
+            <h2>03.02.02</h2>
+            <h3>XD PROTOTYPE</h3>
+            <button>
+              <a
+                href="https://xd.adobe.com/view/34c4c29e-1f5b-4f42-8f38-92ab463a18df-6197/"
+                target="_blank"
+                >SE PROTOTYPE</a
+              >
+            </button>
+            <button>
+              <a
+                href="https://ceciliejasmin.dk/kea/03_ux/dokumentation.pdf"
+                target="_blank"
+                >DOKUMENTATION</a
+              >
+            </button>
           </div>
         </div>
+
+        <details>
+          <summary>LÆS OM MIT FORLØB HER</summary>
+          <div class="paragraph">
+            <p>
+              I opgaven skulle vi udarbejde en klikbar, HI-FI-prototype til en
+              t-shirt webshop. Vi skulle selv finde på en USP der kunne løse en
+              problemstilling ud fra en valgt målgruppe. Min målgruppe var 18-30
+              år og min problemstilling var den store konkurrence i tøjbranchen
+              samt besværligheden ved at returnere tøj når man shopper online,
+              ofte fordi tøjet ikke passer. Løsningen blev bæredygtige unisex
+              t-shirts hvor man kunne hyre en designer/skrædder og derved sikre
+              perfekt pasform samt tilbyde custom made designs. Her lærte jeg
+              både at tænke på virksomhedens brand samt brugerens oplevelse.
+              Ideen og layoutet blev fundet ved at benytte bl.a. design sprint
+              som metode. Det fandt jeg meget nyttigt da jeg havde svært ved at
+              finde på et koncept i starten.
+            </p>
+            <p>
+              Da konceptet var fastlagt, udarbejdede jeg en HI-FI-prototype i
+              Adobe XD der løbende kunne testes og forbedres. Her lærte jeg om
+              værktøjerne ui-kits og components, der gjorde det nemmere og
+              hurtigere for mig at lave prototypen. Jeg brugte bl.a. components
+              i menuen, CTA-knapper, footer m.m.
+            </p>
+            <p>
+              For at kunne skabe et brugervenligt produkt lærte jeg om user
+              interface og konventioner. Det havde betydning for min placering
+              af logoet, indkøbskurven, søgefeltet m.m. Dette lærte jeg blandt
+              andet gennem tænke-højt-testen hvor man observerer brugerens
+              adfærd samt sitets usability. Derudover lærte jeg om copy og
+              microcopy der er små tekster der skal motivere brugeren til at
+              udføre en handling samtidig med at brugeren får den bedste
+              oplevelse.
+            </p>
+            <p>
+              Under temaet fik vi færdigheder i Photoshop til at kunne producere
+              billeder til prototypen. I mit tilfælde lærte jeg at lave
+              splashcolor effekt på mine produkter samt duotone billeder. Ud fra
+              undersøgelser blev jeg bekræftet i at mit farverige design tiltrak
+              opmærksomheden som ønsket.
+            </p>
+            <p>
+              Til sidst skulle det færdige produkt pitches, hvor vi
+              argumenterede for de designmæssige og funktionelle beslutninger vi
+              havde taget ud fra data og reelle indsigter vi har fået fra vores
+              research, test og feedback. Her lærte jeg at mit pitch skulle have
+              mere fokus på selve processen og de data/indsigter jeg havde
+              indsamlet end det færdige produkt.
+            </p>
+          </div>
+        </details>
       </section>
     </main>
 
