--- a/web.html
+++ b/web.html
@@ -56,7 +56,9 @@
       </section>
 
       <section>
+        <div class="tema_overskrift">
         <h2>OPGAVER I TEMAET</h2>
+        </div>
        
           <div class="tema_grid">
             <div class="temabillede">
