--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
       <section class="splash">
-        <img src="billeder/splash_portfolio_3.png" alt="test" />
+        <img src="billeder/splash_portfolio_3.webp" alt="test" />
 
         <h1>PORTFOLIO</h1>
         <p>MMD 1. SEMESTER F2021</p>
@@ -77,7 +77,7 @@
       <section>
         <div class="tema_billeder">
           <div class="billede_1">
-            <img src="billeder/animation_billede_2.webp" />
+            <img src="billeder/animation_billede.webp" />
           </div>
           <div class="billede_2">
             <img src="billeder/ux_billede.webp" />
