change of pic name

--- a/om_mig.html
+++ b/om_mig.html
@@ -40,7 +40,7 @@
       <section>
         <div class="section_wrapper2">
           <div class="profilbillede1">
-            <img src="billeder/profilbillede2.webp" />
+            <img src="billeder/profilbillede1.webp" />
           </div>
           <div class="text_left">
             <h2>HVORFOR MMD?</h2>
@@ -68,7 +68,7 @@
       <section>
         <div class="section_wrapper2">
           <div class="profilbillede2">
-            <img src="billeder/profilbillede5.webp" />
+            <img src="billeder/profilbillede2.webp" />
           </div>
 
           <div class="text_right">
@@ -94,7 +94,7 @@
       <section>
         <div class="section_wrapper2">
           <div class="tegning">
-            <img src="billeder/tegninger2.webp" />
+            <img src="billeder/tegning.webp" />
           </div>
            <div class="text_left">
             <h2>KOMPETENCER</h2>
@@ -120,7 +120,7 @@
                 <img src="billeder/indy.webp" />
               </div>
               <div class="billede_3">
-                <img src="billeder/kbh2.webp" />
+                <img src="billeder/kbh.webp" />
               </div>
             </div>
           </div>
